# climate-action-climatoology

./: .gitignore  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  environment.yaml  pyproject.toml
.gitlab/: renovate.json
.gitlab/issue_templates/: Default.md
climatoology/: __init__.py
climatoology/app/: api.py  exception.py  platform.py  plugin.py  sender.py  settings.py  tasks.py
climatoology/base/: __init__.py  artifact.py  artifact_creators.py  baseoperator.py  computation.py  event.py  exception.py  i18n.py  info.py  logging.py  operator.py  plugin_info.py  utils.py
climatoology/broker/: message_broker.py
climatoology/store/: exception.py  object_store.py
climatoology/store/database/: database.py  models.py  tables.py
climatoology/store/database/migration/: alembic.ini  alembic_config_discovery.py  env.py
climatoology/store/database/migration/versions/: 2025-06-02T12-00_0c77b1f5b970_add_celery_tables.py  2025-06-03T21-58_3d4313578291_initial_setup.py  2025-06-03T22-42_f5dbc6d77574_add_teaser_to_info.py  2025-06-03T23-08_8b52ceba3457_use_unique_id_for_computation.py  2025-06-03T23-11_3ac1827b309d_add_plugin_state_info.py  2025-06-04T12-15_70fe35822ab9_add_shelf_life_to_computation.py  2025-06-04T12-20_403bc7fe5d0c_fix_deduplication_key.py  2025-06-04T12-32_b19b6b5c427f_move_aoi_params_to_lookup.py  2025-07-04T18-12_d77cdd5e2fb2_make_status_optional.py  2025-08-11T10-49_403c9000148c_add_repository_url.py  2025-09-24T18-07_b117fa8afa0a_remove_old_columns.py  2025-09-26T12-11_018584ddd53c_remove_old_columns.py  2025-09-26T12-11_018584ddd53c_rename_info_id.py  2025-09-26T15-03_6c56a2ce5490_add_artifact_sources.py  2025-09-26T15-03_6c56a2ce5490_remove_old_columns.py  2025-09-27T23-07_afbe6fd67545_add_views.py  2025-10-30T13-58_0364d1c8dd4e_revise_artifact_table.py  2025-11-12T08-49_540bd0182fc3_remove_computation_timestamp.py  2025-11-14T14-09_9ba5a3807edb_add_key_column_to_info.py  2025-11-27T23-07_afbe6fd67545_add_views.py  2025-11-28T15-55_2d37688e948a_rename_info.py  2025-12-02T11-38_4e81ecfc7a7a_improve_tables.py  2025-12-02T12-07_afbe6fd67545_add_views.py  2025-12-16T13-46_3128973eabf4_create_demo_flag.py  2026-01-14T14-10_eec8b7cd6825_revert_from_jsonb_to_json.py  2026-03-10T18-18_f4d8bfa97356_remove_old_computation_state_enum.py  2026-03-12T15-09_7d48fb34ccbe_add_language_support.py  2026-03-13T14-46_bf7b34435593_add_language_to_computations.py  2026-03-31T20-29_f398f777a563_.py  403bc7fe5d0c_fix_deduplication_key.py  403c9000148c_add_repository_url.py  45b227b8bee7_rename_schema.py  49cccfd144a8_add_computation_metadata.py  85fc74361055_add_author_and_artifact_rank.py
climatoology/store/database/models/: __init__.py  artifact.py  base.py  celery.py  computation.py  info.py  plugin_info.py  views.py
climatoology/utility/: LULC.py  Naturalness.py  api.py  exception.py  lulc.py  naturalness.py
conf/: config.yaml
docs/: ca_base_settings.md
example/: info_command.py  report_command.py  report_notification.py  worker.py
test/: conftest.py
test/app/: test_platform.py  test_plugin.py  test_sender.py  test_settings.py  test_tasks.py
test/base/: test_artifact.py  test_baseoperator.py  test_info.py  test_operator.py  test_plugin_info.py
test/base/artifact/: test_artifact.py  test_artifact_creators.py  test_chart.py  test_geojson.py  test_geotiff.py  test_image.py  test_markdown.py  test_raster.py  test_table.py  test_vector.py
test/broker/: test_broker.py
test/fixtures/: alembic.py  aoi.py  artifact.py  computation.py  database.py  naturalness.py  plugin.py  plugin_info.py
test/resources/: invalid_test.bib  minimal.bib  test.bib  test_aoi.geojson  test_display_file.md  test_raster_c.tiff  test_raster_d.tiff
test/resources/locales/: messages.pot
test/resources/locales/de/: purpose.md  teaser.txt
test/resources/locales/de/LC_MESSAGES/: messages.mo  messages.po
test/resources/locales/en/: methodology.md  purpose.md
test/resources/locales/en/LC_MESSAGES/: messages.mo  messages.po
test/resources/locales_multiple/de/: methodology.md
test/resources/locales_multiple/en/: methodology.md  teaser.txt
test/resources/rasters/: test_raster_0-1_a_res90.tiff  test_raster_0-1_b_res90.tiff  test_raster_0-1_c_res90.tiff  test_raster_lulc_b.tiff  test_raster_small_res90.tiff
test/store/: test_object_store.py  test_store.py
test/store/database/: test_database.py  test_migration.py
test/store/database/models/: test_views.py
test/utility/: test_api.py  test_lulc.py  test_naturalness.py  test_raster_a.tiff
