[tool.poetry]
name = "climatoology"
version = "6.0.1"
description = "This package provides the underlying functionality to implement Climate Action Operators and Plugins and to interact with the backend."
authors = [
    "Maciej Adamiak <maciej.adamiak@heigit.org>",
    "Moritz Schott <moritz.schott@heigit.org>",
    "Danielle Gatland <danielle.gatland@heigit.org>"
]
readme = "README.md"
repository = "https://gitlab.heigit.org/climate-action/climatoology"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "~3.11.5"
pydantic = "^2.8.2"
pydantic-extra-types = "^2.1.0"
pydantic-settings = "^2.6.0"
geojson-pydantic = "^1.1.2"
bibtexparser = "^1.4.0"
semver = "^3.0.1"
minio = "^7.1.16"
rasterio = "^1.3.11"
sentinelhub = "^3.9.1"
tqdm = "^4.66.1"
requests = "^2.31.0"
pillow = "^11.0.0"
email-validator = "^2.0.0.post2"
pandas = "^2.1.4"
geopandas = "^1.0.1"
celery = { extras = ["sqlalchemy"], version = "^5.4.0" }
psycopg2-binary = "^2.9.10"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
responses = "^0.25.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
