[project]
name = "climatoology"
version = "7.0.0-rc3"
description = "This package provides the underlying functionality to implement Climate Action Operators and Plugins and to interact with the backend."
authors = [
    { name = "Moritz Schott", email = "moritz.schott@heigit.org" },
    { name = "Danielle Gatland", email = "danielle.gatland@heigit.org" },
    { name = "Maciej Adamiak", email = "maciej.adamiak@heigit.org" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13.5,<3.14"
dependencies = [
    "pydantic (>=2.8.2,<3.0.0)",
    "pydantic-extra-types (>=2.1.0,<3.0.0)",
    "pydantic-settings (>=2.6.0,<3.0.0)",
    "geojson-pydantic (>=2.0.0,<3.0.0)",
    "pydantic-shapely (>=1.0.0a5,<2.0.0)",
    "bibtexparser (>=1.4.0,<2.0.0)",
    "semver (>=3.0.1,<4.0.0)",
    "minio (>=7.1.16,<8.0.0)",
    "rasterio (>=1.3.11,<2.0.0)",
    "sentinelhub (>=3.9.1,<4.0.0)",
    "tqdm (>=4.66.1,<5.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pillow (>=12.0.0,<12.1.0)",
    "pandas (>=2.1.4,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "celery[sqlalchemy] (>=5.4.0,<6.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "sqlalchemy-utils (>=0.42.0,<0.43.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "alembic-utils (>=0.8.8,<0.9.0)",
    "alembic-postgresql-enum (>=1.7.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
]

[project.scripts]
alembic-config-location = 'climatoology.store.database.migration.alembic_config_discovery:discover'

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/climatoology"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.14.0"
pytest-postgresql = "^7.0.1"
pytest-alembic = "^0.12.1"
pytest-minio-mock = "^0.4.16"
freezegun = "^1.5.5"
responses = "^0.25.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.14.9"
celery-types = "^0.23.0"
pandas-stubs = "^2.3.0.250703"

[tool.alembic]
script_location = "%(here)s/climatoology/store/database/migration"
prepend_sys_path = [
    "."
]
file_template = "%%(year)d-%%(month).2d-%%(day).2dT%%(hour).2d-%%(minute).2d_%%(rev)s_%%(slug)s"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select = [
    # defaults
    "F",
    "E4", "E7", "E9",
    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions
    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",
    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
